--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.1.2'
     compile fileTree(dir: 'libs', include: 'Parse-1.7.1.jar')
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.android.gms:play-services:5+'
 }
