YouTube Api Commit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,6 @@ android {
 dependencies {
     compile 'com.parse.bolts:bolts-android:1.1.2'
     compile fileTree(dir: 'libs', include: 'Parse-1.7.1.jar')
+    compile fileTree(dir: 'libs', include: 'YouTubeAndroidPlayerApi.jar')
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
