--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.vibrate"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -37,6 +37,18 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.n.carapp.MainActivity" />
+        </activity>
+
+        <activity android:name=".YouTubeActivity"
+            android:label="YouTubeActivity"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
+
+        <activity android:name=".YoutubeFragment"
+            android:label="YoutubeFragment"
+            android:parentActivityName=".MainActivity">
+
         </activity>
 
     <activity android:name=".SingleItemView"
